[package]
name = "busicom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
boards = { path = "../boards" }
log = "*"
arbitrary-int = "*"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Window',
  'MediaQueryList',
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlInputElement',
]

[profile.release]
lto = true